--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -108,9 +108,6 @@
   .btn--2 i {
     color: #0072b1; /* LinkedIn Blue */
   }
-  .btn--3 i {
-    color: #1da1f2; /* Twitter Blue */
-  }
   .btn--4 i {
     color: #12100E; /* Medium: dark black */
   }
@@ -118,3 +115,43 @@
   .btn--5 i {
     color: #E1306C; /* Instagram pink */
   }
+
+  @media (max-width: 640px) {
+    .btn,
+    .btn .content {
+      width: 70px;
+      height: 70px;
+    }
+  
+    .btn .content .front i {
+      font-size: 1.4rem;
+    }
+  
+    .btn .content .back p {
+      font-size: 0.75rem;
+    }
+  }
+  
+.btn:focus .content,
+.btn:hover .content {
+  transform: rotateY(180deg) rotateX(-0.03turn);
+  outline: none;
+}
+
+
+.btn:hover {
+  animation: pulse 1s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    box-shadow: 0 0 0 0 rgba(106, 13, 173, 0.7);
+  }
+  70% {
+    box-shadow: 0 0 0 10px rgba(106, 13, 173, 0);
+  }
+  100% {
+    box-shadow: 0 0 0 0 rgba(106, 13, 173, 0);
+  }
+}
+
